Updated the explanation of posterior

--- a/pcfg_notes/yoshinari_notes_pcfg.tex
+++ b/pcfg_notes/yoshinari_notes_pcfg.tex
@@ -59,7 +59,7 @@ $$
 P(\theta|\boldsymbol{s}, \alpha) = \sum_{\boldsymbol{t}} P(\boldsymbol{t}, \theta | \boldsymbol{s}, \alpha) 
 $$
 
-In conlcusion, the main problem under Bayesian framework using Dirichlet prior with hyper-parameter $\alpha$ is to compute the posterior $P(\boldsymbol{t}, \theta | \boldsymbol{s}, \alpha)$.
+In conclusion, under both unsupervised setting with Bayesian framework, our objective is to compute the posterior $P(\boldsymbol{t}, \theta | \boldsymbol{s}, \alpha)$ using Dirichlet prior with hyper-parameter $\alpha$.
 
 \section{Key Features}
 \begin{enumerate}
@@ -78,6 +78,7 @@ In a supervised setting, a tree $t$ and a sentence $s$ are both observable.
  \item Variational Inference, Gibbs samping, and particle filter in gerneal.
  \item Start from assuming that the parse trees $\boldsymbol{t}$ are observed. Then, study about the Bayesian framework applied to PCFG.
  \item Review the NLP lectures by Chris Manning on Coursera
+ \item What is marginal likelihood?
 \end{enumerate}
 
 
