Added the slides explaining marginal likelihood

--- a/pcfg_notes/yoshinari_notes_pcfg.bib
+++ b/pcfg_notes/yoshinari_notes_pcfg.bib
@@ -32,3 +32,9 @@
   pages     = {1033--1041},
   url       = {http://www.aclweb.org/anthology/P13-1102}
 }
+@misc{joint_vs_marginal,
+  author = {Joakim Nivre},
+  title = {{Natural Language Processing: Statistical Models and Algorithms}},
+  howpublished = "\url{http://stp.lingfil.uu.se/~nivre/master/NLP-StatModels.pdf/}",
+  note = "[Online; accessed 29-Jan-2016]"
+}
