Adding some explanation of parameters used in HMM

--- a/pcfg_notes/yoshinari_notes_pcfg.bib
+++ b/pcfg_notes/yoshinari_notes_pcfg.bib
@@ -38,3 +38,15 @@
   howpublished = "\url{http://stp.lingfil.uu.se/~nivre/master/NLP-StatModels.pdf/}",
   note = "[Online; accessed 29-Jan-2016]"
 }
+@misc{hmm_parameters,
+  author = {Christian N. S. Pedersen},
+  title = {{Hidden Markov Models: Terminology and Basic Algorithms}},
+  howpublished = "\url{http://users-cs.au.dk/cstorm/courses/PRiB_f12/slides/hidden-markov-models-1.pdf/}",
+  note = "[Online; accessed 29-Jan-2016]"
+}
+@misc{mlss09,
+  author = {Zoubin Ghahramani},
+  title = {{Machine Learning Summer School Lecture 3: Learning parameters and structure}},
+  howpublished = "\url{http://mlg.eng.cam.ac.uk/mlss09/mlss_slides/Ghahramani_3.pdf/}",
+  note = "[Online; accessed 29-Jan-2016]"
+}
