--- a/pcfg_notes/yoshinari_notes_pcfg.tex
+++ b/pcfg_notes/yoshinari_notes_pcfg.tex
@@ -46,7 +46,7 @@ $$
 
 Under unsupervised setting, since the data consists of sentences $\boldsymbol{s}$,
 $$
-P(\boldsymbol{s}|\theta) = \prod_i P(s_i | \theta) = \prod_i \sum_{t_i \in T: yeild(t_i) = s_i} P(t_i | \theta)
+P(\boldsymbol{s}|\theta) = \prod_i P(s_i | \theta) = \prod_i \sum_{t_i \in T: yield(t_i) = s_i} P(t_i | \theta)
 $$
 
 % TODO: not fully understood this part yet
@@ -64,7 +64,7 @@ $$
 
 In conclusion, under both unsupervised setting with Bayesian framework, our objective is to compute the posterior $P(\boldsymbol{t}, \theta | \boldsymbol{s}, \alpha)$ using Dirichlet prior with hyper-parameter $\alpha$.
 
-\section{Marginal Likelihood vs. Joint likelihoood}
+\section{Marginal Likelihood vs. Joint likelihood}
 
 With labeled data $D = \{x_i, y_i\}$, the joint likelihood \cite{joint_vs_marginal} is
 $$
@@ -79,7 +79,7 @@ which need to compute every way of filling in the missing labels $y$ \cite{mlss0
 
 
 Marginal likelihood is used when training data is unlabeled \cite{joint_vs_marginal} (Cited slides use HMM as an example). 
-With unlabeled training data, we maximized the marginal likelihood of the input. In HMM case, the parameters $\boldsymbol{\theta}$ are transition probabilities $A$, emission probabilities $\phi$, and probability of being an initial state $\pi$ \cite{hmm_parameters}. In \cite{joint_vs_marginal}, the parameters $\boldsymbol{\theta}$ is a bit unclear so let me clarify. Transition probabilities can be computed using state sequence $\boldsymbol{y}$ alone. Thereore, $P(y_i|\theta)$ or $P(y_i|A, \pi)$ is the transition probability. Emission probabilites can be computed the observed sequence and the state sequence $\boldsymbol{x}$ and $\boldsymbol{x}$. Therefore, $P(x_i|y_i,\theta)$ or $P(x_i|y_i, \phi)$ is the emission probability. 
+With unlabeled training data, we maximized the marginal likelihood of the input. In HMM case, the parameters $\boldsymbol{\theta}$ are transition probabilities $A$, emission probabilities $\phi$, and probability of being an initial state $\pi$ \cite{hmm_parameters}. In \cite{joint_vs_marginal}, the parameters $\boldsymbol{\theta}$ is a bit unclear so let me clarify. Transition probabilities can be computed using state sequence $\boldsymbol{y}$ alone. Therefore, $P(y_i|\theta)$ or $P(y_i|A, \pi)$ is the transition probability. Emission probabilities can be computed the observed sequence and the state sequence $\boldsymbol{x}$ and $\boldsymbol{x}$. Therefore, $P(x_i|y_i,\theta)$ or $P(x_i|y_i, \phi)$ is the emission probability. 
 
 \section{Key Features}
 \begin{enumerate}
@@ -96,7 +96,7 @@ In a supervised setting, a tree $t$ and a sentence $s$ are both observable.
 \section{Future Studies}
 \begin{enumerate}
  \item Read \cite{beal2003variational} and \cite{kurihara2004application}.
- \item Variational Inference, Gibbs samping, and particle filter in gerneal.
+ \item Variational Inference, Gibbs sampling, and particle filter in general.
  \item Start from assuming that the parse trees $\boldsymbol{t}$ are observed. Then, study about the Bayesian framework applied to PCFG.
  \item Review the NLP lectures by Chris Manning on Coursera
  \item What is marginal likelihood?
