--- a/pcfg_notes/yoshinari_notes_pcfg.tex
+++ b/pcfg_notes/yoshinari_notes_pcfg.tex
@@ -66,20 +66,31 @@ In conclusion, under both unsupervised setting with Bayesian framework, our obje
 
 \section{Marginal Likelihood vs. Joint likelihood}
 
-With labeled data $D = \{x_i, y_i\}$, the joint likelihood \cite{joint_vs_marginal} is
+With labeled data $D = \{x_i, y_i\}$, the joint likelihood of input and output \cite{joint_vs_marginal} is
 $$
-\argmax_{\theta} \prod^n_{i = 1} P(y_i|\theta) P(x_i|y_i, \theta).
+\argmax_{\theta} L(\theta|X, Y) = \argmax_{\theta} \prod^n_{i = 1} P(y_i|\theta) P(x_i|y_i, \theta).
 $$
 
-With unlabeled data $D = \{x_i\}$, the marginal likelihood \cite{joint_vs_marginal} is
+With unlabeled data $D = \{x_i\}$, the marginal likelihood of input \cite{joint_vs_marginal} is
 $$
-\argmax_{\theta} \prod^n_{i = 1} \sum_{y \in \Omega_Y}P(y|\theta) P(x_i|y, \theta).
+\argmax_{\theta} L(\theta|X) = \argmax_{\theta} \prod^n_{i = 1} \sum_{y \in \Omega_Y}P(y|\theta) P(x_i|y, \theta).
 $$
 which need to compute every way of filling in the missing labels $y$ \cite{mlss09}.
 
 
 Marginal likelihood is used when training data is unlabeled \cite{joint_vs_marginal} (Cited slides use HMM as an example). 
 With unlabeled training data, we maximized the marginal likelihood of the input. In HMM case, the parameters $\boldsymbol{\theta}$ are transition probabilities $A$, emission probabilities $\phi$, and probability of being an initial state $\pi$ \cite{hmm_parameters}. In \cite{joint_vs_marginal}, the parameters $\boldsymbol{\theta}$ is a bit unclear so let me clarify. Transition probabilities can be computed using state sequence $\boldsymbol{y}$ alone. Therefore, $P(y_i|\theta)$ or $P(y_i|A, \pi)$ is the transition probability. Emission probabilities can be computed the observed sequence and the state sequence $\boldsymbol{x}$ and $\boldsymbol{x}$. Therefore, $P(x_i|y_i,\theta)$ or $P(x_i|y_i, \phi)$ is the emission probability. 
+
+\section{Summary of Parameter Learning \cite{mlss09}}
+
+\begin{center}
+    \begin{tabular}{|l|l|l|}
+    \hline
+             & labeled data                    & unlabeled data  \\\hline
+    ML       & frequency                       & EM              \\\hline
+    Bayesian & updated Dirichlet distribution  & MCMC/VB         \\\hline
+    \end{tabular}
+\end{center}
 
 \section{Key Features}
 \begin{enumerate}
