More on marginal likelihood

--- a/pcfg_notes/yoshinari_notes_pcfg.bib
+++ b/pcfg_notes/yoshinari_notes_pcfg.bib
@@ -50,3 +50,18 @@
   howpublished = "\url{http://mlg.eng.cam.ac.uk/mlss09/mlss_slides/Ghahramani_3.pdf/}",
   note = "[Online; accessed 29-Jan-2016]"
 }
+@misc{pcfg_marginal,
+  author = {Miguel Ballesteros},
+  title = {{Probabilistic Context-Free-Grammars}},
+  howpublished = "\url{http://demo.clab.cs.cmu.edu/fa2015-11711/images/c/ce/Pcfgs.pdf/}",
+  note = "[Online; accessed 31-Jan-2016]"
+}
+@misc{liang_jordan_klein,
+  author = {Percy Liang, Michael I. Jordan, Dan Klein},
+  title = {{Probabilistic Grammars and Hierarchical Dirichlet Processes}},
+  howpublished = "\url{http://www-cs.stanford.edu/~pliang/papers/hdppcfg-haba.pdf/}",
+  note = "[Online; accessed 31-Jan-2016]"
+}
+
+
+
