Added learning theta under hidden trees using EM

--- a/pcfg_notes/yoshinari_notes_pcfg.bib
+++ b/pcfg_notes/yoshinari_notes_pcfg.bib
@@ -62,6 +62,31 @@
   howpublished = "\url{http://www-cs.stanford.edu/~pliang/papers/hdppcfg-haba.pdf/}",
   note = "[Online; accessed 31-Jan-2016]"
 }
+@misc{mochihashi_diary,
+  author = {Daichi Mochihashi},
+  title = {{Prof. Mochihashi's Diary about "Bayesian Inference for PCFGs via Markov Chain Monte Carlo" (In Japanese)}},
+  howpublished = "\url{http://www.chasen.org/~daiti-m/diary/?200804b/}",
+  note = "[Online; accessed 4-Feb-2016]"
+}
+
+@misc{mochihashi_diary,
+  author = {Anonymus person},
+  title = {{What does Nhat stands for? (In Japanese)}},
+  howpublished = "\url{http://detail.chiebukuro.yahoo.co.jp/qa/question_detail/q12144074897/}",
+  note = "[Online; accessed 4-Feb-2016]"
+}
+@misc{map_vs_bayesian,
+  author = {Avinash Kak},
+  title = {{ML, MAP, and Bayesian — The Holy Trinity of Parameter Estimation and Data Prediction}},
+  howpublished = "\url{https://engineering.purdue.edu/kak/Tutorials/Trinity.pdf/}",
+  note = "[Online; accessed 4-Feb-2016]"
+}
+@misc{learning_tree_annotation,
+  author = {Miloš Ercegovčević},
+  title = {{Learning Accurate, Compact, and Interpretable Tree Annotation}},
+  howpublished = "\url{https://www.coli.uni-saarland.de/~yzhang/rapt-ws1112/slides/ercegovcevic.ppt/}",
+  note = "[Online; accessed 4-Feb-2016]"
+}
 
 
 
