--- a/pcfg_notes/yoshinari_notes_pcfg.tex
+++ b/pcfg_notes/yoshinari_notes_pcfg.tex
@@ -28,7 +28,7 @@ where parse trees $t$ are hidden. How do we do that? Let's start from not consid
 
 \section{Applying Bayesian Framework over Hidden Parse Trees}
 % TODO: clean this section up.
-Then, let's considering applying Bayesian framework:
+Then, let's consider applying Bayesian framework and try to aim for maximizing the posterior distribution $P(\theta|\boldsymbol{s})$:
 $$
 P(\theta|\boldsymbol{s}) \propto P(\boldsymbol{s}|\theta) P(\theta)
 $$
@@ -49,7 +49,7 @@ Assume that $s$ is distributed as $Multinomial$ i.e. $\boldsymbol{s} \sim Multin
 $$
 \theta|\boldsymbol{s} \sim Dirichlet(f_{\boldsymbol{t}} + \alpha)
 $$
-where $f_{\boldsymbol{t}}$ is the vector of production counts in $\boldsymbol{t}$ indexed by $r \in R$ \cite{johnson-griffiths-goldwater:2007:main}.
+where $f_{\boldsymbol{t}}$ is the vector of production counts in $\boldsymbol{t}$ indexed by $r \in R$ \cite{johnson-griffiths-goldwater:2007:main}. This is intuitive result too since we can directly reflect the number of times we observed a rule in the training data.
 
 \section{Training Bayesian PCFG under supervised and unsupervised setting}
 
@@ -130,8 +130,26 @@ Here, we assume that the prior is dirichlet distribution, likelihood is multinom
  \item Unsupervised (parse trees not observed)
 \end{enumerate}
 
+
+\section{Sparse Grammar = Sparse Dirichlet Prior}
+\begin{enumerate}
+ \item ``Our results illustrate that Bayesian inference using a prior that favors sparsity can produce linguistically reasonable analyses in situations in which EM does not.'' \cite{johnson-griffiths-goldwater:2007:main}.
+ \item ``This ability to bias the sampler toward sparse grammars (i.e., grammars in which many productions have probabilities close to 0) is useful {\bf when we attempt to identify relevant productions from a much larger set of possible productions via parameter estimation}'' \cite{johnson-griffiths-goldwater:2007:main}.
+ \item ``Thus in this application the ability to prefer sparse grammars enables us to find linguistically meaningful analyses. This ability to find linguistically meaningful structure is relatively rare in our experience with unsupervised PCFG induction'' \cite{johnson-griffiths-goldwater:2007:main}.
+ \item ``We found that for $\alpha > 10^{-2}$ the samples produced by the Hastings algorithm were the same trivial analyses as those produced by the IO algorithm, but as α was reduced below this t began to exhibit nontrivial structure'' \cite{johnson-griffiths-goldwater:2007:main}.
+\end{enumerate}
+
+
 \section{Misc. Notes}
-In a supervised setting, a tree $t$ and a sentence $s$ are both observable.
+\begin{enumerate}
+ \item In a supervised setting, a tree $t$ and a sentence $s$ are both observable.
+ \item Geometric distibution, Binomial disctribution all have Dirichelt distribution as its conjuguate priors (or multi-dimensional beta distributions)
+ \item Using sparse Dirichlet priors ($\alpha < 1$) is the key. (Encouraging majority of values will be concentrated in a few of the values)
+ \item Why VB instead of MCMC? 1) Scaling or training on large amount of data is easier. It can also be applied to two level hierarchical Bayesian models, but not to the multiple levels of hierarchical Bayesian models. In that case, MCMC is good at it.
+\end{enumerate}
+
+
+
 
 
 \section{Future Studies}
