--- a/em_algorithm_notes/yoshinari_notes_em.bib
+++ b/em_algorithm_notes/yoshinari_notes_em.bib
@@ -1,1 +1,10 @@
-
+@article{nigam2000text,
+  title={Text classification from labeled and unlabeled documents using EM},
+  author={Nigam, Kamal and McCallum, Andrew Kachites and Thrun, Sebastian and Mitchell, Tom},
+  journal={Machine learning},
+  volume={39},
+  number={2-3},
+  pages={103--134},
+  year={2000},
+  publisher={Springer}
+}
