Adding more info. on Naive Bayes

--- a/em_algorithm_notes/yoshinari_notes_em.bib
+++ b/em_algorithm_notes/yoshinari_notes_em.bib
@@ -8,3 +8,10 @@
   year={2000},
   publisher={Springer}
 }
+@book{Takamura2010,
+  title={言語処理のための機械学習入門 (自然言語処理シリーズ)},
+  author={高村 大也},
+  publisher={コロナ社},
+  year={2010},
+  month={7},
+}
