Adding one more section

--- a/dual_decomposition_notes/yoshinari_notes_dd.tex
+++ b/dual_decomposition_notes/yoshinari_notes_dd.tex
@@ -32,6 +32,9 @@ See \cite{Rush_2012_tutorial} for the full tutorial.
 \end{aligned}
 \end{equation*}
 
+\section{Dual Decomposition for Parsing}
+Cherry-picking importnat points from \cite{Rush_2012_tutorial}.
+
 \bibliographystyle{plain}
 \bibliography{yoshinari_notes_dd}
 
