Adding more notes on Naive Bayes and one paper

--- a/em_algorithm_notes/yoshinari_notes_em.bib
+++ b/em_algorithm_notes/yoshinari_notes_em.bib
@@ -15,3 +15,8 @@
   year={2010},
   month={7},
 }
+@misc{naive_bayes_lecture,
+  author = {Chris Ketelsen},
+  title = {{CSCI 5622: Machine Learning Lecture 2: Naive Bayes}},
+  year={2016},
+}
