Added an explanation about double exponential dist

--- a/sage_notes/yoshinari_notes_sage.bib
+++ b/sage_notes/yoshinari_notes_sage.bib
@@ -11,3 +11,8 @@
   slides = {http://www.cc.gatech.edu/~jeisenst/papers/icml2011presentation.pdf},
   title = {Sparse Additive Generative Models of Text}
 }
+@misc{laplace_prior,
+  title = {{Why is Laplace prior producing sparse solutions?}},
+  howpublished = "\url{http://stats.stackexchange.com/questions/177210/why-is-laplace-prior-producing-sparse-solutions/}",
+  note = "[Online; accessed 9-Sep-2016]"
+}
