--- a/sage_notes/yoshinari_notes_sage.tex
+++ b/sage_notes/yoshinari_notes_sage.tex
@@ -29,6 +29,7 @@ $$
 
 Now, the prior is no longer limited to Dirichlet distribution. For example, a prior can be a Gaussian distribution $\bm{\eta} \sim N(0, \Sigma)$ where $\Sigma$ can encode the similarity between words.
 
+In the SAGE paper \cite{eisenstein2011sparse}, Laplace prior or double exponential distribution (also see the graph at \cite{place_prior}) is used to produce sparsity. 
 Sparsity also encourages interpretability because we can now focus on fewer parameters (or words).
 
 \bibliographystyle{plain}
