Fixing the log decomposition

--- a/prob_neural_word_embed_notes/yoshinari_notes_prob_neural_word_embed.tex
+++ b/prob_neural_word_embed_notes/yoshinari_notes_prob_neural_word_embed.tex
@@ -84,7 +84,7 @@ q(b_{w,i};\gamma_{w,i}) = \gamma_{w,i}^{b_{w,i}} (1 - \gamma_{w,i})^{1 - b_{w,i}
 $$
 
 $$
- \log(q(b_{w,i};\gamma_{w,i})) = b_{w,i}\gamma_{w,i} + (1 - b_{w,i})(1 - \gamma_{w,i})
+ \log(q(b_{w,i};\gamma_{w,i})) = b_{w,i}\log(\gamma_{w,i}) + (1 - b_{w,i})\log(1 - \gamma_{w,i})
 $$
 
 
